methods.returning.MethodsReturning.scala.code
var vuBiscuit:Boolean = false
var n = 0
var m = 0

def haveBaggle():Boolean = {
  
	do {
  	for (n <- 1 to 6) {
    	avance();
    	if (estSurBiscuit == true) {
      	vuBiscuit = true;
    	}
  	}
  	for (n <- 1 to 6) {
    	recule();
  	}
  	if (vuBiscuit == false) {
    	droite();
    	avance();
    }
  
	} while (vuBiscuit != true)
}

haveBaggle();